Fix for "Homepage List view & Search results: All images have a blue border on IE10 & IE9"

--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -11,3 +11,7 @@
 		display: inline-block;
 	}
 }
+
+img {
+	border: 0;
+}
